Bug 1659758 - Null-check event target in nsDocShellTreeOwner::AddChromeListeners. r=smaug

Tentative fix (though crash is long-standing), so no test :/

Differential Revision: https://phabricator.services.mozilla.com/D88090